# endless-key-flatpak

./: .bumpversion.cfg  .bumpversion.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  meson.build  meson_options.txt
.github/workflows/: build.yml  update.yaml
build-aux/flatpak/: logger.py.diff  org.endlessos.Key.Devel.json  org.learningequality.Kolibri.Devel.json  python3-kolibri-app-desktop-xdg-plugin.json  python3-kolibri-desktop-auth-plugin.json  python3-kolibri.json  python3-requests.json  python3-setproctitle.json  python3-virtualenv-api.json  server.py.diff
build-aux/flatpak/modules/: 0001-Allow-superuser-to-be-null-in-device-provision-API.patch  0001-Get-port-number-for-zeroconf-from-cherrypy.server.patch  AppStream.json  cli.py.diff  endless-key-collections.json  iproute2.json  libxmlb.json  pyeverywhere.json  python3-kolibri-app-desktop-xdg-plugin.json  python3-kolibri-desktop-auth-plugin.json  python3-kolibri-explore-plugin.json  python3-kolibri-pytz.json  python3-kolibri.json  python3-langcodes.json  python3-markdown.json  python3-setproctitle.json  yaml.json
build-aux/flatpak/modules/python3-kolibri-patches/: 0002-Allow-disabling-PortCache-in-KolibriProcessBus.patch  0002-Fix-Kolibri-blocking-after-starting-with-port-0.patch
data/: meson.build  org.learningequality.Kolibri.gresource.xml.in
data/applications/: meson.build  org.learningequality.Kolibri.Frontend.desktop.in.in  org.learningequality.Kolibri.Launcher.desktop.in  org.learningequality.Kolibri.desktop.in  org.learningequality.Kolibri.desktop.in.in
data/dbus/: meson.build  org.learningequality.Kolibri.Daemon.service.in  org.learningequality.Kolibri.Frontend.service.in  org.learningequality.Kolibri.Launcher.service.in  org.learningequality.Kolibri.SearchProvider.service.in  org.learningequality.Kolibri.service.in
data/dbus-1/services/: org.learningequality.Kolibri.SearchProvider.service  org.learningequality.Kolibri.service
data/gnome-shell/: meson.build  org.learningequality.Kolibri.ini.in
data/gnome-shell/search-providers/: org.learningequality.Kolibri.ini
data/icons/: meson.build
data/kolibri-gnome/: meson.build
data/kolibri-gnome/assets/: _load-ar.html  _load-bg.html  _load-bn.html  _load-en_US.html  _load-es_ES.html  _load-fa.html  _load-fr.html  _load-gu_IN.html  _load-hi.html  _load-ko.html  _load-la.html  _load-mr.html  _load-my.html  _load-ny.html  _load-pt_BR.html  _load-sw_TZ.html  _load-te.html  _load-ur_PK.html  _load-vi.html  _load-yo.html  _load.html
data/media-icons/: meson.build
data/metainfo/: meson.build  org.endlessos.Key.metainfo.xml.in.in  org.learningequality.Kolibri.metainfo.xml.in  org.learningequality.Kolibri.metainfo.xml.in.in
po/: LINGUAS  POTFILES.in  ar.po  bg.po  bn.po  en.po  es-ES.po  es.po  es_ES.po  fa.po  fr.po  fv.po  gu-IN.po  gu_IN.po  hi.po  it.po  ko.po  kolibri-gnome.pot  la.po  mr.po  my.po  ny.po  pt-BR.po  pt_BR.po  sw-TZ.po  sw_TZ.po  te.po  tl.po  ur-PK.po  ur_PK.po  vi.po  yo.po
src/: kolibri-daemon.in  kolibri-gnome-env.sh.in  kolibri-gnome.in  kolibri-launcher.in  kolibri-search-provider.in  meson.build
src/kolibri_app/: config.py.in  globals.py  kolibri_settings.py  meson.build  utils.py
src/kolibri_daemon/: __init__.py  accounts_service.py  application.py  content_extensions.py  content_extensions_manager.py  dbus_helpers.py  dbus_utils.py  desktop_users.py  futures.py  glib_helpers.py  kolibri-daemon.in  kolibri_http_process.py  kolibri_search_handler.py  kolibri_service.py  kolibri_service_context.py  kolibri_service_main.py  kolibri_service_manager.py  kolibri_service_process_main.py  kolibri_service_process_setup.py  kolibri_service_process_stop.py  kolibri_service_setup.py  kolibri_service_stop.py  kolibri_utils.py  main.py  meson.build  utils.py
src/kolibri_daemon/kolibri_service/: content_extensions.py  context.py  django_process.py  setup_process.py  stop_process.py
src/kolibri_gnome/: __init__.py  application.py  config.py.in  dbus_utils.py  globals.py  kolibri-gnome.in  kolibri_context.py  kolibri_daemon_manager.py  kolibri_daemon_proxy.py  kolibri_globals.py  kolibri_idle_monitor.py  kolibri_redirect.py  kolibri_service.py  kolibri_settings.py  kolibri_webview.py  kolibri_window.py  main.py  meson.build  run_kolibri.py  run_kolibri_desktop.py  run_kolibri_service.py  utils.py
src/kolibri_gnome/desktop/: application.py  main.py  utils.py
src/kolibri_gnome/desktop_launcher/: application.py  channel.py  kolibri_idle_monitor.py  kolibri_redirect.py  kolibri_service.py  main.py  service_utils.py  utils.py
src/kolibri_gnome/kolibri_daemon/: application.py  content_extensions.py  kolibri_search_handler.py  kolibri_service.py  kolibri_service_main.py  kolibri_service_setup.py  kolibri_service_stop.py  main.py  utils.py
src/kolibri_gnome/kolibri_service/: application.py  content_extensions.py  kolibri_idle_monitor.py  kolibri_redirect.py  kolibri_service.py  kolibri_service_main.py  kolibri_service_monitor.py  kolibri_service_setup.py  kolibri_service_stop.py  main.py  utils.py
src/kolibri_gnome/launcher/: application.py  main.py
src/kolibri_gnome/search_provider/: application.py  main.py  utils.py
src/kolibri_gnome_launcher/: application.py  kolibri-gnome-launcher.in  main.py  meson.build
src/kolibri_gnome_search_provider/: kolibri-gnome-search-provider-application.c  kolibri-gnome-search-provider-application.h  kolibri-gnome-search-provider-main.c  kolibri-gnome-search-provider.c  kolibri-gnome-search-provider.h  kolibri-task-multiplexer.c  kolibri-task-multiplexer.h  kolibri-utils.c  kolibri-utils.h  meson.build  org.learningequality.Kolibri.Daemon.xml
src/libkolibri_daemon_dbus/: kolibri-daemon-dbus-utils.c  kolibri-daemon-dbus-utils.h  meson.build  org.learningequality.Kolibri.Daemon.xml  org.learningequality.Kolibri.Daemon.xml.in
src/tools/: kolibri-listcontent.py  meson.build
tests/: meson.build
tests/kolibri_gnome_tests/: meson.build  test_kolibri_context.py
