option(
    'profile',
    type: 'combo',
    choices: [
        'default',
        'development'
    ],
    value: 'default'
)

option(
    'base_application_id',
    type: 'string',
    value: 'org.learningequality.Kolibri',
    description: 'Base application ID. When profile is "development", ".Devel" is appended'
)

option(
    'base_object_path',
    type: 'string',
    value: '/org/learningequality/Kolibri',
    description: 'Base D-Bus object path. When profile is "development", "/Devel" is appended'
)

option(
    'env_prefix',
    type: 'string',
    value: 'KOLIBRI_',
    description: 'Prefix for environment variables. When profile is "development", "DEVEL_" is appended'
)
