option(
    'profile',
    type: 'combo',
    choices: [
        'default',
        'development'
    ],
    value: 'default'
)

option(
    'base_application_id',
    type: 'string',
    value: 'org.endlessos.Key',
    description: 'Base application ID. When profile is "development", ".Devel" is appended'
)

option(
    'base_object_path',
    type: 'string',
    value: '/org/endlessos/Key',
    description: 'Base D-Bus object path. When profile is "development", "/Devel" is appended'
)

option(
    'env_prefix',
    type: 'string',
    value: 'ENDLESS_KEY_',
    description: 'Prefix for environment variables. When profile is "development", "DEVEL_" is appended'
)

option(
    'uri_prefix',
    type: 'string',
    value: 'x-endless-key',
    description: 'Prefix for custom URI schemes. When profile is "development", "-devel" is appended'
)
