icons_dir = join_paths(datadir, 'icons', 'hicolor')

install_data(
    sources: [
        'icon-64.png',
        'icon-128.png',
        'icon-256.png',
        'icon-512.png',
    ],
    rename: [
        '64x64/apps/org.learningequality.Kolibri.png',
        '128x128/apps/org.learningequality.Kolibri.png',
        '256x256/apps/org.learningequality.Kolibri.png',
        '512x512/apps/org.learningequality.Kolibri.png',
    ],
    install_dir: icons_dir
)
