install_data(
    sources: [
        'checkbox-marked-circle-outline.svg',
        'cube-outline.svg',
        'image-outline.svg',
        'motion-outline.svg',
        'play-circle-outline.svg',
        'podcast.svg',
        'text-box-outline.svg'
    ],
    rename: [
        'scalable/apps/@0@-checkbox-marked-circle-outline.svg'.format(base_application_id),
        'scalable/apps/@0@-cube-outline.svg'.format(base_application_id),
        'scalable/apps/@0@-image-outline.svg'.format(base_application_id),
        'scalable/apps/@0@-motion-outline.svg'.format(base_application_id),
        'scalable/apps/@0@-play-circle-outline.svg'.format(base_application_id),
        'scalable/apps/@0@-podcast.svg'.format(base_application_id),
        'scalable/apps/@0@-text-box-outline.svg'.format(base_application_id)
    ],
    install_dir: icons_dir
)
